# driver-x

./: .gitignore  README.md  docker-compose.yml  package.json  setup.sh
client/: .dockerignore  eslint.config.mjs  package.json  pnpm-lock.yaml
client/src/app/: globals.css  layout.tsx  providers.tsx
client/src/app/(auth)/: layout.tsx
client/src/app/(dashboard)/: layout.tsx
client/src/app/test/: page.tsx
client/src/components/: DashboardHeader.tsx  ResponsiveModal.tsx
client/src/lib/: api-client.ts  atoms.ts  auth-utils.ts  env.ts  fetcher.ts  google-maps.tsx
client/src/types/: api.ts  models.ts
docs/: assessment.md
docs/resources/: How to fill out a log book for truck drivers Complete guide and walkthrough.txt  fmcsa-hos-395-drivers-guide-to-hos-2022-04-28-0.md
docs/software-specs/: data-models.md  hos-rules.md  logbook-generation.md  map-integration.md  overview.md  timeline-input-flow.md  ui-components.md
server/: .dockerignore  .gitignore  Dockerfile  README.md  env.example  main.py  pyproject.toml  tasks.py
server/api/: admin.py  apps.py  exceptions.py  models.py  permissions.py  response.py  serializers.py  signals.py  urls.py  views.py
server/api/migrations/: 0001_initial.py  0002_activity_end_location.py  0003_trip_name.py
server/api/serializers/: __init__.py  auth.py  common.py  log.py  trip.py
server/api/services/: distance_calculator.py  hos_validator.py  route_calculator.py  timeline.py  trip_updater.py
server/api/views/: __init__.py  activity.py  auth.py  common.py  daily_log.py  trip.py
server/server/: settings.py  urls.py
(+59 files in other folders)
